# democmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  Taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json
doc/: README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
